# ciudse-telemetry

./: .dockerignore  .eslintrc  .eslintrc.json  .gitignore  .parcelrc  Dockerfile  README.md  README_english.md  build-images.bash  docker-compose.yml  package-lock.json  package.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
.parcel-cache/: 687f8a990313aa2f.txt  data.mdb  lock.mdb
backend/: README.md  example_telemetry_generator copy.py  example_telemetry_generator.py
backend/src/: data.rs  main.rs  messages.rs
frontend/: .eslintrc  package-lock.json
src/: index.html  main.js
src/plugins/: hello-world.js  historical-telemetry.js  plugin.js  realtime-telemetry.js  test-spaceship.js  test-spaceship.json  utils.js
static/: index.html  test-spaceship.json
telemetry-frontend/: .eslintrc.json  .gitignore  .parcelrc  README.md  build_and_copy.sh  copy-openmct-assets.js  package-lock.json  package.json
telemetry-server/: Cargo.toml  README.md  db-test.py  telemachus_openmct_bridge.py  telemetry_point.py
telemetry-server/src/: config.rs  data.rs  lib.rs  main.rs  messages.rs
telemetry-server/src/actors/: common.rs  database.rs  injest.rs  mod.rs  realtime.rs
telemetry-server/src/actors/telemetry/: injest.rs  mod.rs  realtime.rs
telemetry-server/src/telemetry/: types.rs  utils.rs
telemetry-utils/: cimarron2_bridge.py  db_test.py  example_telemetry_generator.py  example_telemetry_generator_multiparameters.py  orbit_sim.py  requirements.txt  telemachus_openmct_bridge.py
(+27 files in other folders)
