[package]
name = "telemetry-server"
version = "0.1.0"
authors = ["Robert Serrano Kobylyansky <sk.robchik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-actors = "3"
actix = "0.10.0"
actix-files = "0.3"
actix-cors = "0.5.4"
env_logger = "0.8"
log = "0.4"
serde = "1.0.130"
serde_json = "1.0"
ms-converter = "1.4"
chrono = "0.4.19"