[package]
name = "telemetry-server"
version = "0.1.0"
authors = ["Robert Serrano Kobylyansky <sk.robchik@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-web-actors = "4.1"
actix = "0.13"
actix-files = "0.6"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ms-converter = "1.4"
chrono = "0.4.19"
itertools = "0.10.3"